# local_audio_sync

./: .gitignore  README.md  pubspec.yaml
.claude/: settings.json  settings.local.json
.github/workflows/: build-android.yml  build-ios.yml  build-macos.yml  build-windows.yml  ci.yml  setup-broadcast-extension.yml  testflight.yml
android/: gradle.properties
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/local_audio_sync/: AudioBroadcastService.kt  HubPlaybackService.kt  MainActivity.kt
docs/: PLAN.md  TESTFLIGHT_SETUP.md  iOS_BROADCAST_EXTENSION_PBXPROJ.md  iOS_BROADCAST_SETUP.md
docs/ios/: README.md  audio-pipeline.md  setup-no-xcode-pbxproj.md  setup-xcode.md
integration_test/: hub_client_loopback_test.dart
ios/: ExportOptions.plist  Podfile
ios/BroadcastExtension/: BroadcastExtension.entitlements  Info.plist  SampleHandler.swift
ios/Runner/: AppDelegate.swift  AudioSessionManager.swift  BroadcastPickerView.swift  BroadcastReceiverPlugin.swift  Info.plist  ScreenAudioPlugin.swift
ios/Runner.xcodeproj/: project.pbxproj
ios/fastlane/: Fastfile
ios/scripts/: add_broadcast_extension.rb
lib/: app.dart  main.dart
lib/models/: app_mode.dart  audio_packet.dart  client_diagnostics.dart  client_info.dart  client_link_stats.dart  control_messages.dart
lib/providers/: app_mode_provider.dart  client_controller_provider.dart  client_state_provider.dart  discovered_hubs_provider.dart  hub_diagnostics_provider.dart  hub_selection_provider.dart  hub_state_provider.dart  hub_view_prefs_provider.dart  master_volume_provider.dart  theme_mode_provider.dart  visible_clients_provider.dart
lib/screens/: client_screen.dart  client_settings_screen.dart  hub_screen.dart  hub_settings_screen.dart  setup_screen.dart
lib/screens/hub/: hub_desktop_view.dart  hub_mobile_view.dart
lib/services/: audio_capture_service.dart  audio_mixer_service.dart  client_controller.dart  client_settings_store.dart  command_retry_queue.dart  device_identity_service.dart  discovery_service.dart  hub_background_keeper.dart  hub_controller.dart  jitter_buffer.dart  last_hub_store.dart  manual_hub_store.dart  mdns_discovery_service.dart  opus_decoder_service.dart  opus_encoder_service.dart  pcm_chunker.dart  pcm_constants.dart  screen_audio_capture_service.dart  udp_receiver_service.dart  udp_sender_service.dart  windows_loopback_service.dart
lib/theme/: app_colors.dart  app_spacing.dart  app_theme.dart
lib/widgets/: broadcast_picker_button.dart  client_tile.dart  connection_status_badge.dart  vu_meter.dart
lib/widgets/client/: action_banner.dart  broadcast_section.dart  connection_card.dart  hub_picker.dart  paused_by_hub_banner.dart
lib/widgets/hub/: client_row.dart  client_toolbar.dart  diagnostics_chip.dart  hub_dashboard.dart
macos/: ExportOptions.plist  Podfile
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: DebugProfile.entitlements  Info.plist  MainFlutterWindow.swift  Release.entitlements  ScreenCaptureKitPlugin.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
macos/opus_macos/: opus_macos.podspec
macos/opus_macos/opus.framework/Versions/A/: opus
macos/opus_macos/opus.framework/Versions/A/Resources/: Info.plist
plan/: 2026-07-12.md  MAC_VSCODE_BUILD.md
test/: widget_test.dart
test/models/: audio_packet_test.dart  control_messages_test.dart
test/providers/: hub_state_provider_test.dart  visible_clients_provider_test.dart
test/services/: client_controller_test.dart  client_settings_store_test.dart  command_retry_queue_test.dart  device_identity_service_test.dart  discovery_service_test.dart  hub_controller_test.dart  jitter_buffer_test.dart  last_hub_store_test.dart  manual_hub_store_test.dart  pcm_chunker_test.dart  pcm_constants_test.dart  udp_sender_service_test.dart  windows_loopback_service_test.dart
windows/: CMakeLists.txt
windows/audio_mixer_plugin/: CMakeLists.txt  audio_mixer.cpp  audio_mixer.h
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
